2010-??-?? : 1.8.2
	vm : use 16 digits (instead of 10) for float display
	std : allow up to 512MB array/string size in serialize (instead of 1MB)
	std : bugfix in utf8 (with 4 bytes codes)

2009-07-26 : 1.8.1
	nekoc : small fix in evaluation of using jump tables for switch on integers
	regexp : use a recursion limit to prevent stack overflows in pcre
	mysql5 : completely rewrote mysql client
	mod_tora : complete rearchitecture with abstract protocol
	std : added socket_set_fast_send
	mod_tora : use socket fast send to optimize timing
	mod_tora : fixed bug when .n file does not exists
	mod_tora : fix for Apache 2.x - does not set the content-type if declined
	mod_tora : added port range configuration (for random tora server)
	std, mod_tora : propagate jit mode to created threads
	nekoc : optimization for debug infos : precompute file table at compile-time
	threads : added neko_gc_register_thread (but buggy, so not used)
	mysql5 : added 5 hours network timeout while waiting for an answer
	mysql5 : fixed some additional errors handling
	mysql5 : allow big requests (more than 16MB)
	vm : optimize object table - one word and one memory block saved per object
	jit : one more crash fix for the + operation and unexisting overloaded operator
	nekoml : added Sys.is_directory, Sys.read_directory and Regexp.split
	nekoml : don't allow empty match
	vm : create pthreads in detached mode (prevent leak on osx/linux)
	std : added math_fceil,math_ffloor,math_fround,math_int,process_kill
	nekoc : forbidden usage of 'var' outside blocks

2008-09-23 : 1.8.0
	added mod_tora (neko application server)
	changed mod_neko get_host_name : return the http host instead of the server IP
	bugfix in nekoml : fixed usage of nekoml.std + added -nostd
	std : added EINTR handling in send/recv socket operations and fread/fwrite
	gc : upgraded windows version to 7.1
	vm : fixed comparison of bool
	vm : moved threads stuff into threads.c